[package]
name = "GitHubFS"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14.0"
libc = "0.2.155"
log = "0.4.21"
base64 = "0.13.0"
env_logger = "0.6.0"
reqwest = { version = "0.12.5", features = ["blocking","json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.118"
clap = { version = "4.3.2", features = ["derive"] }